Fixed overflowing card items in Firefox

--- a/css/card.css
+++ b/css/card.css
@@ -7,6 +7,7 @@
 
   display: grid;
   grid-template-rows: 150px auto auto 1fr 20px;
+  grid-template-columns: minmax(0, 1fr);
   justify-items: center;
   align-items: center;
   gap: 15px;
